--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -19,17 +19,17 @@
   <section class="navLeft flex flex-column w-15rem h-full fixed">
     <ng-container *ngFor="let data of buttonData">
       <button pButton *ngIf="data.hidden === true" (click)="expanded(data.id)"
-              class="border-noround border-none font-bold text-base text-black-alpha-90 {{data.exapandMenu === true ? 'fadeinleft' : ''}}"
+              class="border-noround border-none font-bold text-base text-black-alpha-90 {{data.expandMenu === true ? 'fadeinleft' : ''}}"
               id="btnNavLeft"
               iconPos="right"
-              label="{{data.exapandMenu === true ? data.label : ''}}"
+              label="{{data.expandMenu === true ? data.label : ''}}"
               icon="pi pi-{{data.icon}} font-bold text-base text-black-alpha-90"
               [ngStyle]="{'background-color': data.selected === true ? 'var(--surface-100)' : '#ffffff'}">
-        <div class="flex align-items-center w-full" *ngIf="data.exapandMenu !== true">
+        <div class="flex align-items-center w-full" *ngIf="data.expandMenu !== true">
           <span class="pl-4 text-base text-black-alpha-90">{{data.label}}</span>
-          <i class="pi pi-{{expandMenu == false ? data.iconExpandMenu : data.iconExpandedMenu}} text-sm w-full justify-content-end flex"></i>
+          <i class="pi pi-{{expandMenu === false ? data.iconExpandMenu : data.iconExpandedMenu}} text-sm w-full justify-content-end flex"></i>
         </div>
-        <div class="w-full" *ngIf="data.exapandMenu === true"></div>
+        <div class="w-full" *ngIf="data.expandMenu === true"></div>
       </button>
     </ng-container>
   </section>
