Tela de login, ajustes no data binding, filter service, scss, modais e ajuste no routerlink

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -8,6 +8,7 @@
                 label="{{data.label}}"
                 class="border-none text-black-alpha-90 text-bold border-noround text-lg h-4rem bg-white"
                 [ngClass]="{'selected': data.selected === true}"
+                routerLink="{{data.routerLink}}"
                 id="btnNavOptions">
         </button>
       </ng-container>
