--- a/src/app/modal/adicionar-agente/adicionar-agente.component.html
+++ b/src/app/modal/adicionar-agente/adicionar-agente.component.html
@@ -1,6 +1,6 @@
 <div class="card flex justify-content-center align-items-center">
   <div id="card">
-    <h2 class="flex justify-content-center mb-5">ADICIONAR AGENTE</h2>
+    <h2 class="flex justify-content-center mb-5 font-bold text-black-alpha-90">ADICIONAR AGENTE</h2>
     <div class="card flex justify-content-center">
       <div class="flex flex-column gap-2">
         <label class="text-black-alpha-90 font-bold">Nome completo</label>
