--- a/src/app/modules/agentes/agentes.component.html
+++ b/src/app/modules/agentes/agentes.component.html
@@ -4,13 +4,13 @@
     <h1 class="flex align-items-center border-1 inline-block border-blue-200 bg-blue-200 text-white p-2 border-round-xl">AGENTES</h1>
     <span class="p-input-icon-left">
           <i class="pi pi-search"></i>
-          <input pInputText type="text" [(ngModel)]="inputValue" placeholder="Buscar agente" class="w-30rem" />
+          <input pInputText type="text" [(ngModel)]="searchValue" (keyup)="filterProducts()" placeholder="Buscar agente" class="w-30rem" />
     </span>
     <p-button label="Adicionar" icon="pi pi-plus" (click)="showSaveAgente()"></p-button>
   </div>
 </section>
 <div class="card">
-  <p-table [value]="products" selectionMode="single" [paginator]="true" [rows]="3" [(selection)]="selectedProduct" dataKey="code" [tableStyle]="{'min-width': '50rem'}">
+  <p-table [value]="filteredProducts || products" selectionMode="single" [paginator]="true" [rows]="3" [(selection)]="selectedProduct" dataKey="id" [tableStyle]="{'min-width': '50rem'}">
     <ng-template pTemplate="header">
       <tr>
         <th>Nome</th>
@@ -22,9 +22,11 @@
       <tr [pSelectableRow]="product" (click)="pegarId(product.id)">
         <td>{{product.name}}</td>
         <td>{{product.email}}</td>
-        <td><i class="pi pi-trash text-red-500"></i></td>
+        <td><i class="pi pi-trash text-red-500" (click)="confirmDelete()"></i></td>
       </tr>
     </ng-template>
   </p-table>
+
 </div>
 <p-toast></p-toast>
+<p-confirmDialog styleClass="confirmDialog" [style]="{width: '20vw', display: 'flex'}" [closable]="false" acceptButtonStyleClass="w-6 ml-3 mr-0 bg-red-400 border-red-400 shadow-2" rejectButtonStyleClass="w-6 mr-0 bg-blue-400 border-blue-400 shadow-2"></p-confirmDialog>
