--- a/src/app/modal/adicionar-agente/adicionar-agente.component.html
+++ b/src/app/modal/adicionar-agente/adicionar-agente.component.html
@@ -21,7 +21,7 @@
         <label class="text-black-alpha-90 font-bold">Data de nascimento</label>
         <span class="p-input-icon-left">
           <i class="pi pi-search"></i>
-          <p-calendar styleClass="w-30rem" icon="pi pi-calendar" [showIcon]="true" id="dataAgente" dateFormat="dd/mm/yy" [(ngModel)]="dataValue" [showClear]="true" placeholder="DD/MM/AAAA"/>
+          <p-calendar panelStyleClass="small-calendar" styleClass="w-30rem" icon="pi pi-calendar" [showIcon]="true" id="dataAgente" dateFormat="dd/mm/yy" [(ngModel)]="dataValue" [showClear]="true" placeholder="DD/MM/AAAA"/>
         </span>
         <span class="w-full flex justify-content-end mt-3">
           <button pButton label="SALVAR" class="p-button-success w-12rem text-black-alpha-90 btnSave border-none" (click)="showSave(1)"></button>
