Adição da pasta core, services e modals

--- a/src/app/layouts/nav/nav.component.html
+++ b/src/app/layouts/nav/nav.component.html
@@ -7,7 +7,7 @@
                 icon=""
                 label="{{data.label}}"
                 class="border-none text-black-alpha-90 text-bold border-noround text-lg h-4rem bg-white"
-                [ngClass]="{'selected': data.selected === true}"
+                routerLinkActive='selected'
                 routerLink="{{data.routerLink}}"
                 id="btnNavOptions">
         </button>
